[gd_scene load_steps=59 format=3 uid="uid://bsiqip3vsfyy2"]

[ext_resource type="Script" uid="uid://dyy271ir1vef4" path="res://script/player.gd" id="1_hjaqi"]
[ext_resource type="Texture2D" uid="uid://ckkvoewai1fod" path="res://art/Player-Sheet.png" id="1_xo3ru"]
[ext_resource type="PackedScene" uid="uid://cqh7gljsbhp3c" path="res://scene/health_bar.tscn" id="3_fvtld"]
[ext_resource type="AudioStream" uid="uid://kua61atu4slu" path="res://audio/running-14658.mp3" id="4_ct4mp"]
[ext_resource type="AudioStream" uid="uid://c7kiawpooytsx" path="res://audio/simple-whoosh-382724.mp3" id="5_s4jxa"]
[ext_resource type="AudioStream" uid="uid://caqwsp46ui1ih" path="res://audio/land-81509.mp3" id="6_oh5ij"]
[ext_resource type="AudioStream" uid="uid://u8mcqto11ouk" path="res://audio/sword-sound-2-36274.mp3" id="7_g2vtq"]
[ext_resource type="AudioStream" uid="uid://cce7m1n2f5jpu" path="res://audio/sword-slash-and-swing-185432.mp3" id="8_2fvbb"]

[sub_resource type="AtlasTexture" id="AtlasTexture_hjaqi"]
atlas = ExtResource("1_xo3ru")
region = Rect2(1408, 0, 64, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_fvtld"]
atlas = ExtResource("1_xo3ru")
region = Rect2(1472, 0, 64, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ct4mp"]
atlas = ExtResource("1_xo3ru")
region = Rect2(1536, 0, 64, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_s4jxa"]
atlas = ExtResource("1_xo3ru")
region = Rect2(1600, 0, 64, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_oh5ij"]
atlas = ExtResource("1_xo3ru")
region = Rect2(1664, 0, 64, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_hp4bs"]
atlas = ExtResource("1_xo3ru")
region = Rect2(1728, 0, 64, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_j4wxg"]
atlas = ExtResource("1_xo3ru")
region = Rect2(1792, 0, 64, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_bup7g"]
atlas = ExtResource("1_xo3ru")
region = Rect2(1856, 0, 64, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_4ja17"]
atlas = ExtResource("1_xo3ru")
region = Rect2(1920, 0, 64, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_v4iqv"]
atlas = ExtResource("1_xo3ru")
region = Rect2(1984, 0, 64, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_6lu7o"]
atlas = ExtResource("1_xo3ru")
region = Rect2(2112, 0, 64, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_xj5ck"]
atlas = ExtResource("1_xo3ru")
region = Rect2(2048, 0, 64, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_8rkx0"]
atlas = ExtResource("1_xo3ru")
region = Rect2(2048, 0, 64, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_wyue1"]
atlas = ExtResource("1_xo3ru")
region = Rect2(1984, 0, 64, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_oyaf6"]
atlas = ExtResource("1_xo3ru")
region = Rect2(1920, 0, 64, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_mtygy"]
atlas = ExtResource("1_xo3ru")
region = Rect2(1856, 0, 64, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_fmxba"]
atlas = ExtResource("1_xo3ru")
region = Rect2(1792, 0, 64, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_g2vtq"]
atlas = ExtResource("1_xo3ru")
region = Rect2(960, 0, 64, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_2fvbb"]
atlas = ExtResource("1_xo3ru")
region = Rect2(1024, 0, 64, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ml7e8"]
atlas = ExtResource("1_xo3ru")
region = Rect2(1088, 0, 64, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ihjo1"]
atlas = ExtResource("1_xo3ru")
region = Rect2(1152, 0, 64, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_dk1vr"]
atlas = ExtResource("1_xo3ru")
region = Rect2(1216, 0, 64, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_34jf3"]
atlas = ExtResource("1_xo3ru")
region = Rect2(1280, 0, 64, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_u7b46"]
atlas = ExtResource("1_xo3ru")
region = Rect2(1344, 0, 64, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_42h83"]
atlas = ExtResource("1_xo3ru")
region = Rect2(1408, 0, 64, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_iuf2t"]
atlas = ExtResource("1_xo3ru")
region = Rect2(1472, 0, 64, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_jrjdb"]
atlas = ExtResource("1_xo3ru")
region = Rect2(1536, 0, 64, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_kk4ol"]
atlas = ExtResource("1_xo3ru")
region = Rect2(1600, 0, 64, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_4reak"]
atlas = ExtResource("1_xo3ru")
region = Rect2(1664, 0, 64, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_wt23p"]
atlas = ExtResource("1_xo3ru")
region = Rect2(1728, 0, 64, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_k8m7u"]
atlas = ExtResource("1_xo3ru")
region = Rect2(576, 0, 64, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_qucqc"]
atlas = ExtResource("1_xo3ru")
region = Rect2(640, 0, 64, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_xsw3c"]
atlas = ExtResource("1_xo3ru")
region = Rect2(0, 0, 64, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_l1uwf"]
atlas = ExtResource("1_xo3ru")
region = Rect2(64, 0, 64, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_8ie14"]
atlas = ExtResource("1_xo3ru")
region = Rect2(128, 0, 64, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_pk8el"]
atlas = ExtResource("1_xo3ru")
region = Rect2(192, 0, 64, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_3vgh4"]
atlas = ExtResource("1_xo3ru")
region = Rect2(256, 0, 64, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_h3knh"]
atlas = ExtResource("1_xo3ru")
region = Rect2(320, 0, 64, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_n3008"]
atlas = ExtResource("1_xo3ru")
region = Rect2(384, 0, 64, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_wpsxb"]
atlas = ExtResource("1_xo3ru")
region = Rect2(448, 0, 64, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_rt08c"]
atlas = ExtResource("1_xo3ru")
region = Rect2(704, 0, 64, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_6vs06"]
atlas = ExtResource("1_xo3ru")
region = Rect2(768, 0, 64, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_4uieu"]
atlas = ExtResource("1_xo3ru")
region = Rect2(832, 0, 64, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_5wapc"]
atlas = ExtResource("1_xo3ru")
region = Rect2(896, 0, 64, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_xj5ck"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hjaqi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fvtld")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ct4mp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s4jxa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oh5ij")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hp4bs")
}],
"loop": false,
"name": &"air_atk",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_j4wxg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bup7g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4ja17")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v4iqv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6lu7o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xj5ck")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8rkx0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wyue1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oyaf6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mtygy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fmxba")
}],
"loop": false,
"name": &"dash",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_g2vtq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2fvbb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ml7e8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ihjo1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dk1vr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_34jf3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u7b46")
}],
"loop": false,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_42h83")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iuf2t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jrjdb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kk4ol")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4reak")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wt23p")
}],
"loop": false,
"name": &"double_atk",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_k8m7u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qucqc")
}],
"loop": true,
"name": &"fall",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xsw3c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l1uwf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8ie14")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pk8el")
}],
"loop": true,
"name": &"idle",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3vgh4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h3knh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n3008")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wpsxb")
}],
"loop": true,
"name": &"run",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rt08c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6vs06")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4uieu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5wapc")
}],
"loop": false,
"name": &"single_atk",
"speed": 10.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_6lu7o"]
radius = 3.0
height = 16.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_hjaqi"]
radius = 5.99972
height = 25.045

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_fvtld"]
radius = 5.0
height = 18.0

[sub_resource type="Gradient" id="Gradient_fvtld"]
offsets = PackedFloat32Array(0, 0.616883)
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_ct4mp"]
gradient = SubResource("Gradient_fvtld")
fill = 1
fill_from = Vector2(0.5, 0.5)

[node name="player" type="CharacterBody2D"]
scale = Vector2(1.5172, 1.39921)
collision_layer = 2
script = ExtResource("1_hjaqi")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_xj5ck")
animation = &"idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_6lu7o")

[node name="Camera2D" type="Camera2D" parent="."]
enabled = false
zoom = Vector2(2.5, 2.5)

[node name="DealDamageZone" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="DealDamageZone"]
position = Vector2(17.7959, 0.714689)
rotation = 1.56112
shape = SubResource("CapsuleShape2D_hjaqi")
disabled = true

[node name="playerHitbox" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="playerHitbox"]
shape = SubResource("CapsuleShape2D_fvtld")

[node name="HealthBar" parent="." instance=ExtResource("3_fvtld")]
offset_left = -5.0
offset_top = 11.0
offset_right = 5.0
offset_bottom = 14.0

[node name="SoulLight" type="PointLight2D" parent="."]
energy = 2.0
shadow_enabled = true
texture = SubResource("GradientTexture2D_ct4mp")
texture_scale = 4.81

[node name="SFX_Run" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_ct4mp")
bus = &"SFX"

[node name="SFX_Dash" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_s4jxa")
bus = &"SFX"

[node name="SFX_Jump" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_s4jxa")
bus = &"SFX"

[node name="SFX_Fall" type="AudioStreamPlayer" parent="."]
bus = &"SFX"

[node name="SFX_Land" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_oh5ij")
bus = &"SFX"

[node name="SFX_Atk1" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_g2vtq")
bus = &"SFX"

[node name="SFX_Atk2" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_2fvbb")
bus = &"SFX"

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="ready" from="Camera2D" to="." method="_on_camera_2d_ready"]
